@@ -1,7 +1,7 @@
 /*****************************************************************************\
  *  start_job.c - Process Wiki start job request
  *****************************************************************************
- *  Copyright (C) 2006 The Regents of the University of California.
+ *  Copyright (C) 2006-2007 The Regents of the University of California.
  *  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
  *  Written by Morris Jette <jette1@llnl.gov>
  *  UCRL-CODE-226842.
@@ -134,10 +134,10 @@ static int	_start_job(uint32_t jobid, int task_cnt, char *hostlist,
 		NO_LOCK, WRITE_LOCK, READ_LOCK, NO_LOCK };
 	char *new_node_list;
 	static char tmp_msg[128];
-	bitstr_t *new_bitmap;
+	bitstr_t *new_bitmap, *save_req_bitmap = (bitstr_t *) NULL;
 	bitoff_t i, bsize;
 	int ll; /* layout info index */
-	char *node_name, *node_idx, *node_cur;
+	char *node_name, *node_idx, *node_cur, *save_req_nodes = NULL;
 	size_t node_name_len;
 	static uint32_t cr_test = 0, cr_enabled = 0;
 
@@ -231,9 +231,9 @@ static int	_start_job(uint32_t jobid, int task_cnt, char *hostlist,
 	}
 
 	/* get job ready to start now */
-	xfree(job_ptr->details->req_nodes);
+	save_req_nodes = job_ptr->details->req_nodes;
 	job_ptr->details->req_nodes = new_node_list;
-	FREE_NULL_BITMAP(job_ptr->details->req_node_bitmap);
+	save_req_bitmap = job_ptr->details->req_node_bitmap;
 	job_ptr->details->req_node_bitmap = new_bitmap;
 	old_task_cnt = job_ptr->num_procs;
 	job_ptr->num_procs = MAX(task_cnt, old_task_cnt); 
@@ -248,7 +248,22 @@ static int	_start_job(uint32_t jobid, int task_cnt, char *hostlist,
 	/* Check to insure the job was actually started */
 	lock_slurmctld(job_write_lock);
 	/* job_ptr = find_job_record(jobid);	don't bother */
-	if ((job_ptr->job_id == jobid)
+
+	if ((job_ptr->job_id == jobid) && job_ptr->details &&
+	    (job_ptr->job_state == JOB_RUNNING)) {
+		/* Restore required node list */
+		xfree(job_ptr->details->req_nodes);
+		job_ptr->details->req_nodes = save_req_nodes;
+		FREE_NULL_BITMAP(job_ptr->details->req_node_bitmap);
+		job_ptr->details->req_node_bitmap = save_req_bitmap;
+		FREE_NULL_BITMAP(job_ptr->details->exc_node_bitmap);
+	} else {
+		xfree(save_req_nodes);
+		FREE_NULL_BITMAP(save_req_bitmap);
+		FREE_NULL_BITMAP(job_ptr->details->exc_node_bitmap);
+	}
+
+	if ((job_ptr->job_id == jobid) 
 	&&  (job_ptr->job_state != JOB_RUNNING)) {
 		uint16_t wait_reason = 0;
 		char *wait_string;
