@@ -4,9 +4,11 @@ documents those changes that are of interest to users and admins.
 * Changes in SLURM 1.2.18
 =========================
  -- BLUEGENE - bug fix for smap stating passthroughs are used when they aren't
- -- fixed bug in sview to be able to edit partitions correctly
- -- fixed bug so in slurm.conf files where SlurmdPort isn't defined things
+ -- Fixed bug in sview to be able to edit partitions correctly
+ -- Fixed bug so in slurm.conf files where SlurmdPort isn't defined things
     work correctly.
+ - In sched/wiki2 and sched/wiki add support for batch job being requeued
+   in Slurm either when nodes fail or upon request.
 
 * Changes in SLURM 1.2.17
 =========================
